Added in index.html und error.html HTML Code for List of menu items.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,25 @@
 
   <div>
     <h2 id="form-title">Formular absenden</h2>
-  
+
     <button aria-labelledby="form-title">Absenden</button>
   </div>
+
+  <ul>
+    <li role="presentation">
+      <a href="#" role="menuitem">Home</a>
+    </li>
+    <li role="presentation">
+      <a href="#" role="menuitem">About</a>
+    </li>
+    <li role="presentation">
+      <a href="#" role="menuitem">Services</a>
+    </li>
+    <li role="presentation">
+      <a href="#" role="menuitem">Contact</a>
+    </li>
+  </ul>
+
 
 </body>
 
