aria-activedescendant test completed version 1

--- a/index.html
+++ b/index.html
@@ -43,16 +43,46 @@
 
   <div>
     <h2 id="form-title">Formular absenden</h2>
-  
+
     <button aria-labelledby="form-title">Absenden</button>
   </div>
 
   <div>
-    <img alt="" role="presentation" src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg"style="width: 200px; height: 100px;">
+    <img alt="" role="presentation" src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg"
+      style="width: 200px; height: 100px;">
   </div>
   <div>
-    <img role="presentation" src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg"style="width: 200px; height: 100px;">
+    <img role="presentation" src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg"
+      style="width: 200px; height: 100px;">
   </div>
+
+
+
+  <div>
+    <div role="region" aria-label="List of Songs">
+      <ul id="song-list" role="listbox" aria-activedescendant="song1" tabindex="0">
+        <li id="song1" role="option" aria-selected="true">
+          <div class="song-title">Bohemian Rhapsody</div>
+          <div class="song-artist">Queen</div>
+        </li>
+        <li id="song2" role="option">
+          <div class="song-title">Imagine</div>
+          <div class="song-artist">John Lennon</div>
+        </li>
+        <li id="song3" role="option">
+          <div class="song-title">Hotel California</div>
+          <div class="song-artist">Eagles</div>
+        </li>
+      </ul>
+    </div>
+
+
+  </div>
+
+
+
+
+
 
 
 </body>
