--- a/errors.html
+++ b/errors.html
@@ -44,16 +44,46 @@
   </div>
 
 
-<div>
-  <h2 id="form-title-wrong">Formular absenden</h2>
+  <div>
+    <h2 id="form-title-wrong">Formular absenden</h2>
 
-  <button aria-labelledby="form-title">Absenden</button>
-</div>
+    <button aria-labelledby="form-title">Absenden</button>
+  </div>
 
-<div>
-  <img src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg"style="width: 200px; height: 100px;">
-</div>
+  <div>
+    <img src="https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg" style="width: 200px; height: 100px;">
+  </div>
 
+  <!-- aria-activedescendant-->
+  <div>
+    <div role="region" aria-label="List of Songs">
+      <ul id="song-list" role="listbox" aria-activedescendant="song99" tabindex="0">
+        <li id="song1" role="option" aria-selected="true">
+          <div class="song-title">Bohemian Rhapsody</div>
+          <div class="song-artist">Queen</div>
+        </li>
+        <li id="song2" role="option">
+          <div class="song-title">Imagine</div>
+          <div class="song-artist">John Lennon</div>
+        </li>
+        <li id="song3" role="option">
+          <div class="song-title">Hotel California</div>
+          <div class="song-artist">Eagles</div>
+        </li>
+      </ul>
+    </div>
+
+    <script>
+      $(document).ready(function () {
+        $("[aria-activedescendant]").each(function () {
+          var elmId = $(this).attr("aria-activedescendant");
+          if (!$("#" + elmId).length) {
+            // Falls die angegebene ID nicht existiert, setzen wir sie auf die ID des zweiten Kindelements
+            $(this).attr("aria-activedescendant", $(this).children().eq(1).attr("id"));
+          }
+        });
+      });
+    </script>
 
 
 </body>
